tests/ui/resolve/cannot-find-value-in-scope-22811.rs
// https://github.com/rust-lang/rust/issues/22811
fn main() { println!("{}", foobar); } //~ ERROR cannot find value `foobar` in this scope
